force-app/main/default/objects/Account/fields/Active_Contact__c.field-meta.xml
<CustomField>
    <fullName>Active_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Contact</label>
    <type>Checkbox</type>
</CustomField>