force-app/main/default/objects/Account/fields/Preferred_Language_Account__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Language_Account__c</fullName>
    <label>Preferred Language Account</label>
    <length>50</length>
    <type>Text</type>
</CustomField>