force-app/main/default/objects/Account/validationRules/Account_priority_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_priority_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 (ISCHANGED ( CustomerPriority__c )),
 ISPICKVAL( PRIORVALUE( CustomerPriority__c), &quot;HIGH&quot;),
 NOT( (ISPICKVAL( CustomerPriority__c , &quot;High&quot; ) ))
)</errorConditionFormula>
    <errorMessage>A high Priority cannot be changed</errorMessage>
</ValidationRule>