force-app/main/default/objects/Account/validationRules/Annual_revenue_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Annual_revenue_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL( Type , &quot;Customer - Direct&quot;),  ISBLANK(AnnualRevenue) 
 )</errorConditionFormula>
    <errorDisplayField>AnnualRevenue</errorDisplayField>
    <errorMessage>For Type Customer Direct, Please enter Annual Revenue</errorMessage>
</ValidationRule>