force-app/main/default/objects/Account/validationRules/Phone_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND( AnnualRevenue &gt; 200000, ISBLANK(Phone) )</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Phone Number cannot be blank</errorMessage>
</ValidationRule>